seperated common macros

--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -19,6 +19,9 @@
 set_position_z: 0
 axes: z
 gcode:
+    {% if not 'xy' in printer.toolhead.homed_axes %}
+    G28 X0 Y0
+    {% endif %}
     G90
     G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
     DEPLOY_TOUCHMI
@@ -38,8 +41,8 @@ gcode:
         G28 X0 Y0
         {% endif %}
     G90
-    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_height|int} F3600
-    G1 Y{printer["gcode_macro VARS_PRINTER"].touchmi_y_height|int} F3600
+    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_pos|int} F3600
+    G1 Y{printer["gcode_macro VARS_PRINTER"].touchmi_y_pos|int} F3600
     M400
     {% endif %}
 
@@ -54,11 +57,13 @@ gcode:
 [gcode_macro Z_TILT_ADJUST]
 rename_existing: OLDZ_TILT_ADJUST
 gcode:
+    {% if printer["gcode_macro VARS_PRINTER"].enable_z_tilt|int ==1 %}
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     G28
     {% endif %}
     DEPLOY_TOUCHMI
     OLDZ_TILT_ADJUST
+    {% endif %}
 
 [gcode_macro BED_MESH_CALIBRATE]
 rename_existing: OLDBED_MESH_CALIBRATE
@@ -80,6 +85,13 @@ gcode:
     BED_MESH_CALIBRATE
     RETRACT_TOUCHMI
 
+[gcode_macro HOME_ALL]
+gcode:
+    G28
+    Z_TILT_ADJUST
+    G28 Z0
+    RETRACT_TOUCHMI
+
 ########################
 #
 # START END MACROS
@@ -91,6 +103,7 @@ gcode:
 [gcode_macro START_PRINT]
 default_parameter_BED_TEMP: 60
 default_parameter_EXTRUDER_TEMP: 250
+default_parameter_LOAD: -1
 gcode:
     # metric values
     G21
@@ -109,21 +122,45 @@ gcode:
     # clear pause
     CLEAR_PAUSE
     # Home the printer
-    G28
-    Z_TILT_ADJUST
-    G28 Z0
-    RETRACT_TOUCHMI
+    HOME_ALL
     # Move the nozzle near the bed
     G1 Z15 F3000
     # Set and wait for nozzle to reach temperature
     M109 S{EXTRUDER_TEMP}
+    # Load filament into MMU
+    {% if printer["gcode_macro VARS_PRINTER"].enable_mmu|int ==1 %}
+    HOME_MMU
+    GO_TO_PARKING
+    # zero the extruded length
+    G92 E0
+    {% if LOAD|int != -1 %}
+        {% if LOAD|int == 0 %}
+            T0
+        {% endif %}
+        {% if LOAD|int == 1 %}
+            T1
+        {% endif %}
+        {% if LOAD|int == 2 %}
+            T2
+        {% endif %}
+        {% if LOAD|int == 3 %}
+            T3
+        {% endif %}
+        {% if LOAD|int == 4 %}
+            T4
+        {% endif %}
+        M400
+        G92 E0
+    {% endif %}
+    GO_TO_PARKING_OUT
+    {% endif %}
     # clean nozzle
     clean
     # zero the extruded length
     G92 E0
     # start printing
     G1 F9000
-    M117 Printing...
+    M117 ->> Printing <--
     bip
 
 [gcode_macro END_PRINT]
@@ -137,10 +174,14 @@ gcode:
     # retract the filament a bit before lifting the nozzle to release some of the pressure
     G1 E-1 F300
     # move Z up a bit and retract filament even more
-    G1 Z+5 E-2 X-20 Y-20 F9000 
+    G1 Z+5 E-2 X-20 Y-20 F9000
+    {% if printer["gcode_macro VARS_PRINTER"].enable_mmu|int ==1 %}
+    M702
+    GO_TO_PARKING_OUT
+    {% endif %}
     G90
     # the bed to move to the front
-    G1 X10 Y210 F9000
+    G1 X{printer["gcode_macro VARS_PRINTER"].end_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].end_y_pos|int} F9000
     # Disable steppers
     M84
     # extruder fan off
@@ -162,18 +203,23 @@ gcode:
 
 [gcode_macro clean]
 gcode:
+    {% if printer["gcode_macro VARS_PRINTER"].enable_clean_nozzle|int ==1 %}
+    G90
     G1 Z10
-    G1 X-14 Y46 F3000
+    G1 X{printer["gcode_macro VARS_PRINTER"].change_clean_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_clean_y_pos|int} F3000
     G1 Z-1
-    G1 X-7 Y81
-    G1 X-14 Y62
-    G1 X-7 Y62
-    G1 X-14 Y81
-    G1 X-7 Y46
-    G1 X-14 Y46
-    G1 X-7 Y81
-    G1 X-14 Y62
+    G91
+    G1 X7
+    G1 X-7 Y-19
+    G1 X7
+    G1 X-7 Y19
+    G1 X7 Y-35
+    G1 X-7
+    G1 X7 Y35
+    G1 X-7 Y-19
+    G90
     G1 Z10
+    {%  endif %}
 
 
 
@@ -205,8 +251,6 @@ gcode:
     RESTORE_GCODE_STATE NAME=PAUSE_state
 
 [gcode_macro M600]
-default_parameter_X: 10
-default_parameter_Y: 10
 default_parameter_Z: 10
 gcode:
     SAVE_GCODE_STATE NAME=M600_state
@@ -215,51 +259,39 @@ gcode:
     G1 E-1 F2000
     G1 Z{Z}
     G90
-    G1 X{X} Y{Y} F3000
-    G91
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-50 F3600
+    G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} F3000
+    EJECT_FILAMENT
     bip
     G4 P200
     bip
     G4 P200
     bip
     G4 P10000
-    G1 E100 F3600
-    G1 E100 F3600
-    G1 E100 F3600
-    G1 E100 F3600
-    G1 E100 F3600
-    G1 E50 F500
-    G4 P1000
-    G1 E+1 F600
-    bip
+    INSERT_FILAMENT 
     ; prime nozzle
     G1 E-0.8 F4500
     G1 E0.8 F4500
     G1 E0.8 F4500
     RESTORE_GCODE_STATE NAME=M600_state
 
-[gcode_macro CHANGE_EJECT]
-default_parameter_TEMP: 235
+[gcode_macro EJECT_FILAMENT]
+default_parameter_LENTGH_MAX: 100
 gcode:
-    G28
-    G1 X0 Y0 Z20
-    M109 S{TEMP} T0
     G91
     M83
     bip
-    G1 Z+5 E+1 F4500
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-50 F3600
+    G1 E+1 F4500
+    G1 E+10 F540
+    G1 E-20 F3000
+    G4 P3000
+    {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_slow|int//LENGTH_MAX|int) %}
+    G1 E-{LENTGH_MAX} F200
+    {% endfor %}
+    G1 E-{printer["gcode_macro VARS_PRINTER"].change_length_slow|int%LENGTH_MAX|int} F200
+    {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_fast|int//LENGTH_MAX|int) %}
+    G1 E-{LENTGH_MAX} F3600
+    {% endfor %}
+    G1 E-{printer["gcode_macro VARS_PRINTER"].change_length_fast|int%LENGTH_MAX|int} F3600
     bip
     G4 P200
     bip
@@ -267,41 +299,44 @@ gcode:
     bip
     M82
     G90
-    M104 S0 T0
 
-[gcode_macro CHANGE_INSERT]
+[gcode_macro CHANGE_EJECT]
 default_parameter_TEMP: 235
 gcode:
     G28
-    G1 X0 Y0 Z20
+    G90
+    G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} Z20 F3000
     M109 S{TEMP} T0
+    EJECT_FILAMENT
+    M104 S0 T0
+
+[gcode_macro INSERT_FILAMENT]
+default_parameter_LENTGH_MAX: 100
+gcode:
     G91
     M83
+    {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_fast|int//LENGTH_MAX|int) %}
+    G1 E{LENTGH_MAX} F3600
+    {% endfor %}
+    G1 E{printer["gcode_macro VARS_PRINTER"].change_length_fast|int%LENGTH_MAX|int} F3600
     bip
-    G1 E+100 F3600
-    G1 E+100 F3600
-    G1 E+100 F3600
-    G1 E+100 F3600
-    G1 E+100 F3600
-    G1 E+50 F500
+    {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_slow|int//LENGTH_MAX|int) %}
+    G1 E{LENTGH_MAX} F200
+    {% endfor %}
+    G1 E{printer["gcode_macro VARS_PRINTER"].change_length_slow|int%LENGTH_MAX|int} F200
     G4 P1000
     G1 E+1 F600
     bip
     M82
     G90
+
+[gcode_macro CHANGE_INSERT]
+default_parameter_TEMP: 235
+gcode:
+    G28
+    G90
+    G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} Z20 F3000
+    M109 S{TEMP} T0
+    INSERT_FILAMENT
     M104 S0 T0
 
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [heater_bed]
-#*# control = pid
-#*# pid_kp = 73.981
-#*# pid_ki = 0.815
-#*# pid_kd = 1678.434
-#*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 29.653
-#*# pid_ki = 1.607
-#*# pid_kd = 136.774
