--- a/vam8-bowden/printer.cfg
+++ b/vam8-bowden/printer.cfg
@@ -353,10 +353,20 @@ screw_thread: CW-M3
 #
 ########################
 [gcode_macro VARS_PRINTER]
+variable_change_filament_x_pos: 10 
+variable_change_filament_y_pos: 10
+variable_end_x_pos: 10
+variable_end_y_pos: 210
 variable_touchmi_x_pos: 213
 variable_touchmi_y_pos: 0
 variable_touchmi_z_height: 20
 variable_enable_mmu: 0
+variable_enable_z_tilt: 1
+variable_enable_clean_nozzle: 1
+variable_clean_x_pos: -14 
+variable_clean_y_pos: 81
+variable_change_length_slow: 50
+variable_change_length_fast: 600
 gcode:
 
 [include  printer-macros.cfg]
