unified macros blv

--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -105,6 +105,9 @@ default_parameter_BED_TEMP: 60
 default_parameter_EXTRUDER_TEMP: 250
 default_parameter_LOAD: -1
 gcode:
+    {% if printer["gcode_macro VARS_PRINTER"].enable_servo|int ==1 %}
+    SET_SERVO SERVO=purge_servo angle=0
+    {% endif %}
     # metric values
     G21
     # Use absolute coordinates
