--- a/blv/printer.cfg
+++ b/blv/printer.cfg
@@ -417,7 +417,7 @@ aliases:
 pin: PF0
 x_offset: 30
 y_offset: 5
-z_offset: 6.00
+z_offset: 3.55
 
 [bed_mesh]
 speed: 70
@@ -442,34 +442,6 @@ speed: 50
 horizontal_move_z: 10
 screw_thread: CW-M3
 
-
-[homing_override]
-set_position_z: 10
-axes: z
-gcode:
-    G90
-    G1 Z20 F300
-    G28 X0 Y0
-    G1 X260 F3600
-    G4 P1000
-    G1 X100 Y100 F3600
-    G28 Z0
-    G1 Z0 F300
-    G1 Z10 F300
-
-[gcode_macro G29]
-gcode:
-    G28
-    G1 Z10 F600
-    G90
-    G1 Z20 F300
-    G28 X0 Y0
-    G1 X260 F3600
-    G4 P1000
-    G1 X0 Y0 F3600
-    BED_MESH_CALIBRATE
-    G1 Z0 F300
-
 [z_tilt]
 z_positions:
     -65,85
@@ -481,16 +453,6 @@ horizontal_move_z: 10
 retries: 5
 retry_tolerance: 0.05
 
-[gcode_macro Z_TILT_ADJUST]
-rename_existing: OLDZ_TILT_ADJUST
-gcode:
-    G1 X260 F3600
-    G4 P1000
-    G1 X100 Y100 F3600
-    OLDZ_TILT_ADJUST
-    G1 Z0 F300
-    G1 Z10 F300
-
 ###############################################################
 ###############################################################
 ###############################################################
@@ -501,157 +463,30 @@ gcode:
 # MACROS
 #
 ########################
-
-########################
-#
-# START END MACROS
-#
-########################
-# Replace the slicer's custom start and end g-code scripts with
-# START_PRINT and END_PRINT.
-
-[gcode_macro START_PRINT]
-default_parameter_BED_TEMP: 60
-default_parameter_EXTRUDER_TEMP: 200
-default_parameter_LOAD: -1
+[gcode_macro VARS_PRINTER]
+variable_change_filament_x_pos: 10
+variable_change_filament_y_pos: 10
+variable_end_x_pos: 0
+variable_end_y_pos: 180
+variable_touchmi_x_pos: 260
+variable_touchmi_y_pos: 0
+variable_touchmi_z_height: 20
+variable_enable_mmu: 1
+variable_enable_servo: 1
+variable_enable_z_tilt: 1
+variable_enable_clean_nozzle: 0
+variable_clean_x_pos: -14
+variable_clean_y_pos: 81
+variable_change_length_slow: 0
+variable_change_length_fast: 100
 gcode:
-    # HOME MMU
-    HOME_MMU
-    SET_SERVO SERVO=purge_servo angle=0
-    # metric values
-    G21
-    # Use absolute coordinates
-    G90
-    # set extruder to absolute mode
-    M82
-    # start with the fan off
-    M107
-    # Start bed heating
-    M140 S{BED_TEMP}
-    # Wait for bed to reach temperature
-    M190 S{BED_TEMP}
-    # Reset the G-Code Z offset (adjust Z offset if needed)
-    SET_GCODE_OFFSET Z=0.0
-    # clear pause
-    CLEAR_PAUSE
-    # Home the printer
-    G28
-    # Adjust two Z leadscrew
-    Z_TILT_ADJUST
-    G28
-    # Move the nozzle near the bed
-    G1 Z15 F3000
-    # Set and wait for nozzle to reach temperature
-    GO_TO_PARKING
-    M109 S{EXTRUDER_TEMP}
-    # clean nozzle
-    clean
-    # zero the extruded length
-    G92 E0
-    {% if LOAD|int != -1 %}
-        {% if LOAD|int == 0 %}
-            T0
-        {% endif %}
-        {% if LOAD|int == 1 %}
-            T1
-        {% endif %}
-        {% if LOAD|int == 2 %}
-            T2
-        {% endif %}
-        {% if LOAD|int == 3 %}
-            T3
-        {% endif %}
-        {% if LOAD|int == 4 %}
-            T4
-        {% endif %}
-        G92 E0
-        M400
-    {% endif %}
-    GO_TO_PARKING_OUT
-    # start printing
-    G1 F9000
-    M117 Printing...
-    bip
-
-[gcode_macro END_PRINT]
-gcode:
-    # Move nozzle away from print while retracting
-    G91
-    # retract the filament a bit before lifting the nozzle to release some of the pressure
-    G1 E-1 F300
-    # move Z up a bit and retract filament even more
-    G1 Z+5 E-2 X-20 Y-20 F9000
-    # Eject filament
-    M702
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # the bed to move to the front
-    G90
-    G1 X0 Y200  F9000
-    # Disable steppers
-    M84
-    # extruder fan off
-    M107
-    bip
-
-########################
-#
-#
-#
-########################
-# Use print_start for you slicer starting script
-[gcode_macro bip]
-gcode:
-    SET_PIN PIN=beeper VALUE=1
-    G4 P1000 ; wait 1 s
-    SET_PIN PIN=beeper VALUE=0
-
-###########   MAINSAIL #
-
-[gcode_macro CANCEL_PRINT]
-rename_existing: BASE_CANCEL_PRINT
-default_parameter_X: 230
-default_parameter_Y: 230
-default_parameter_Z: 10
-gcode:
-    M104 S0
-    M140 S0
-    M141 S0
-    M106 S0
-    CLEAR_PAUSE
-    SDCARD_RESET_FILE
-    BASE_CANCEL_PRINT
-
-[gcode_macro PAUSE]
-rename_existing: BASE_PAUSE
-default_parameter_X: 230
-default_parameter_Y: 230
-default_parameter_Z: 10
-gcode:
-    SAVE_GCODE_STATE NAME=PAUSE_state
-    BASE_PAUSE
-    G91
-    G1 E-1.7 F2100
-    G1 Z{Z}
-    G90
-    G1 X{X} Y{Y} F6000
-    G91
-
-[gcode_macro RESUME]
-rename_existing: BASE_RESUME
-gcode:
-    G91
-    G1 E1.7 F2100
-    G91
-    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
-    BASE_RESUME
 
 ########################
 ########################
 ########################
 [include printer-mmu2s.cfg]
+[include printer-mainsail.cfg]
+[include printer-macros.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
