--- a/printer-mainsail.cfg
+++ b/printer-mainsail.cfg
@@ -2,22 +2,22 @@
 
 [gcode_macro CANCEL_PRINT]
 rename_existing: BASE_CANCEL_PRINT
-default_parameter_X: 230
-default_parameter_Y: 230
 default_parameter_Z: 10
 gcode:
     M104 S0
     M140 S0
     M141 S0
     M106 S0
+    G91
+    G1 Z{Z}
+    G90
+    G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} F3000
     CLEAR_PAUSE
     SDCARD_RESET_FILE
     BASE_CANCEL_PRINT
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
-default_parameter_X: 230
-default_parameter_Y: 230
 default_parameter_Z: 10
 gcode:
     SAVE_GCODE_STATE NAME=PAUSE_state
@@ -26,7 +26,7 @@ gcode:
     G1 E-1.7 F2100
     G1 Z{Z}
     G90
-    G1 X{X} Y{Y} F6000
+    G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} F3000
     G91
 
 [gcode_macro RESUME]
