seperated common macros

--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -251,7 +251,7 @@ gcode:
     bip
     G4 P200
     bip
-    RESTORE_GCODE_STATE NAME=PAUSE_state
+    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
 
 [gcode_macro M600]
 default_parameter_Z: 10
@@ -275,7 +275,7 @@ gcode:
     G1 E-0.8 F4500
     G1 E0.8 F4500
     G1 E0.8 F4500
-    RESTORE_GCODE_STATE NAME=M600_state
+    RESTORE_GCODE_STATE NAME=M600_state MOVE=1
 
 [gcode_macro EJECT_FILAMENT]
 default_parameter_LENTGH_MAX: 100
