--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -191,7 +191,7 @@ gcode:
     bip
     bip
     M118 END PAUSE
-    RESTORE_GCODE_STATE NAME=PAUSE_MMU_state
+    RESTORE_GCODE_STATE NAME=PAUSE_MMU_state MOVE=1
 
 # call this macro to correctly RESUME with MMU check
 [gcode_macro RESUME_MMU]
