--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -209,7 +209,7 @@ gcode:
     {% if printer["gcode_macro VARS_PRINTER"].enable_clean_nozzle|int ==1 %}
     G90
     G1 Z10
-    G1 X{printer["gcode_macro VARS_PRINTER"].change_clean_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_clean_y_pos|int} F3000
+    G1 X{printer["gcode_macro VARS_PRINTER"].clean_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].clean_y_pos|int} F3000
     G1 Z-1
     G91
     G1 X7
