--- a/vking/printer.cfg
+++ b/vking/printer.cfg
@@ -1,25 +1,20 @@
-# This file contains common pin mappings for the BIGTREETECH SKR V1.3
-# board. To use this config, the firmware should be compiled for the
-# LPC176x.
+##################################
+#
+# V-KING BNBSX 
+#
+# BIGTREETECH SKR V1.3
+#
+##################################
 
-# See the example.cfg file for a description of available parameters.
-
-
-########################
-# TMC2208 configuration
-########################
-
-# Your SKR 1.3 board is likely to be shipped with lots of jumpers
-# plugged in, together with some spare ones. In order for board to
-# work properly, you may need to add/remove some of the jumpers.
-
-# For TMC2208 UART
-#   1) Remove all of the jumpers below the stepper drivers
-#   2) Place jumpers on the red pin headers labeled XUART (XUART, YUART etc.)
+##################################
+#
+# XYZ
+#
+##################################
 
 [tmc2209 stepper_x]
 uart_pin: P1.17
-microsteps: 32
+microsteps: 16
 run_current: 0.800
 hold_current: 0.500
 stealthchop_threshold: 250
@@ -30,14 +25,14 @@ driver_SGTHRS: 100
 
 [tmc2209 stepper_y]
 uart_pin: P1.15
-microsteps: 32
+microsteps: 16
 run_current: 0.800
 hold_current: 0.500
 stealthchop_threshold: 250
 interpolate: True
 sense_resistor: 0.110
 diag_pin: ^P1.27
-driver_SGTHRS: 100
+driver_SGTHRS: 80
 
 [tmc2208 stepper_z]
 uart_pin: P1.10
@@ -48,27 +43,9 @@ interpolate: True
 sense_resistor: 0.110
 #stealthchop_threshold: 30
 
-[tmc2209 extruder]
-uart_pin: P1.8
-microsteps: 8
-run_current: 1.000
-hold_current: 0.800
-interpolate: True
-sense_resistor: 0.110
-#stealthchop_threshold: 250
-#driver_TOFF: 4
-#driver_HEND: 2
-#driver_HSTRT: 1
-
-########################
-# Main configuration
-########################
-
-## Basic steppers configuration ##
-
 [stepper_x]
 step_pin: P2.2
-dir_pin: !P2.6
+dir_pin: P2.6
 enable_pin: !P2.1
 step_distance: .00625
 #endstop_pin: P1.29
@@ -81,7 +58,7 @@ endstop_pin: tmc2209_stepper_x:virtual_endstop
 
 [stepper_y]
 step_pin: P0.19
-dir_pin: !P0.20
+dir_pin: P0.20
 enable_pin: !P2.8
 step_distance: .00625
 #endstop_pin: P1.27
@@ -105,7 +82,23 @@ position_min: -6
 position_max: 300
 homing_speed: 5
 
-## Extruder configuration ##
+##################################
+#
+# EXTRDUER / BED
+#
+##################################
+
+[tmc2209 extruder]
+uart_pin: P1.8
+microsteps: 8
+run_current: 1.000
+hold_current: 0.800
+interpolate: True
+sense_resistor: 0.110
+#stealthchop_threshold: 250
+#driver_TOFF: 4
+#driver_HEND: 2
+#driver_HSTRT: 1
 
 [extruder]
 step_pin: P2.13
@@ -128,7 +121,7 @@ control: pid
 pid_Kp: 17.678
 pid_Ki: 0.651
 pid_Kd: 119.992
-min_temp: 0
+min_temp: -60
 max_temp: 260
 #max_extrude_only_velocity: 140
 #max_extrude_only_accel: 5000
@@ -145,8 +138,6 @@ min_extrude_temp: 0
 #sensor_pin: P0.25
 #...
 
-## Heatbed configuration ##
-
 [heater_bed]
 heater_pin: P2.5
 sensor_type: NTC 100K beta 3950
@@ -158,7 +149,11 @@ pid_Kp: 61.668
 pid_Ki: 2.741
 pid_Kd: 346.880
 
-## Additional configuration ##
+##################################
+#
+#  FAN
+#
+##################################
 
 [fan]
 pin: P2.3
@@ -167,9 +162,14 @@ pin: P2.3
 pin: P1.24
 heater: extruder
 
+##################################
+#
+# GENERAL : MCU / PRINTER / DISPLAY
+#
+##################################
+
 [virtual_sdcard]
 path: ~/.octoprint/uploads/
-#path: /home/pi/sdcard
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_0C600102E4182DAFBD379E5BC22000F5-if00
@@ -200,67 +200,39 @@ sid_pin: P1.18
 encoder_pins: ^P3.26, ^P3.25
 click_pin: ^!P0.28
 
-# Custom definition to make the beeper work
+[idle_timeout]
+timeout: 300
+
+##################################
+#
+#  PIN
+#
+##################################
+
 [output_pin beeper]
 pin: P1.30
-pwm: True
 value: 0
-shutdown_value: 0
-cycle_time: 0.001
-scale: 1000
 
-# Custom GCode macro to make M300 use the beeper that you just defined
-[gcode_macro M300]
-default_parameter_S: 1000
-default_parameter_P: 100
-gcode:
-    SET_PIN PIN=beeper VALUE={S}
-    G4 P{P}
-    SET_PIN PIN=beeper VALUE=0
-
-
-#[web_dwc2]
-## optional - defaulting to Klipper
-#printer_name: V-King
-## optional - defaulting to 127.0.0.1
-#listen_adress: 0.0.0.0
-## needed - use above 1024 as nonroot
-#listen_port: 4750
-##       optional defaulting to dwc2/web. Its a folder relative to your virtual sdcard.
-#web_path: dwc2/web
+##################################
+#
+# Z probe ...
+#
+##################################
 
 [probe]
 pin: P1.25
 x_offset: 35
 y_offset: 0
-#z_offset: 4.36
-z_offset: 3.2
+z_offset: 3.1
 
 [bed_mesh]
 speed: 100
 horizontal_move_z: 10
-#samples: 2
-#sample_retract_dist: 10
-mesh_min: 40,5
+mesh_min: 40,15
 mesh_max: 350,375
 probe_count: 4,4
 fade_start: 1.0
 fade_end: 10.0
-
-[homing_override]
-set_position_z: 0
-axes: z
-gcode:
-    G90
-    G1 Z20 F300
-    G28 X0 Y0
-    G1 X375 F3600
-    G1 Y-10 F3600
-    G4 P1000
-    G1 X135 Y172 F3600
-    G28 Z0
-    G1 Z0 F300
-    G1 Z10 F300
 
 [screws_tilt_adjust]
 screw1: 0,5
@@ -275,167 +247,40 @@ speed: 50
 horizontal_move_z: 10
 screw_thread: CCW-M5
 
-# Use print_start for you slicer starting script
-[gcode_macro bip]
-gcode:
-    M300 S900 P1000
-
-[idle_timeout]
-timeout: 300
-
-[gcode_macro G29]
-gcode:
-    G28
-    G90
-    G1 Z20 F300
-    G1 X375 F3600
-    G1 Y-10 F3600
-    G4 P1000
-    G1 X135 Y172 F3600
-    BED_MESH_CALIBRATE
-    G1 Z0 F300
-    G1 Z10 F300
-
-
-[gcode_macro CHANGE_EJECT]
-gcode:
-    G28
-    G1 X0 Y0 Z20
-    M109 S215 T0
-    G91
-    M83
-    bip
-    G1 Z+5 E+1 F1000
-    G1 E+10 F540
-    G1 E-20 F3000
-    G4 P3000
-    G1 E-100 F3000
-    bip
-    G4 P200
-    bip
-    G4 P200
-    bip
-    M82
-    G90
-    M104 S0 T0
-
-[gcode_macro CHANGE_INSERT]
-gcode:
-    M109 S215 T0
-    G91
-    M83
-    G1 E+20 F200
-    G1 E+40 F3000
-    G1 E+40 F800
-    G4 P1000
-    G1 E+1 F600
-    bip
-    M82
-    G90
-    M104 S0 T0
-
-[include printer-mmu2s.cfg]
-
-
 ###########################################################################
 ###########################################################################
 ###########################################################################
 ###########################################################################
-
 
 ########################
 #
 # MACROS
 #
 ########################
-
-########################
-#
-# START END MACROS
-#
-########################
-# Replace the slicer's custom start and end g-code scripts with
-# START_PRINT and END_PRINT.
-
-[gcode_macro START_PRINT]
-default_parameter_BED_TEMP: 60
-default_parameter_EXTRUDER_TEMP: 200
-default_parameter_LOAD: -1
+[gcode_macro VARS_PRINTER]
+variable_end_x_pos: 10
+variable_end_y_pos: 10
+variable_touchmi_x_pos: 375
+variable_touchmi_y_pos: -10
+variable_touchmi_z_height: 20
+variable_enable_mmu: 1
+variable_enable_servo: 0
+variable_enable_z_tilt: 0
+variable_enable_clean_nozzle: 0
+variable_clean_x_pos: -14
+variable_clean_y_pos: 81
+variable_change_filament_x_pos: 125
+variable_change_filament_y_pos: -10
+variable_change_length_slow: 10
+variable_change_length_fast: 0
 gcode:
-    # HOME MMU
-    HOME_MMU
-    # metric values
-    G21
-    # Use absolute coordinates
-    G90
-    # set extruder to absolute mode
-    M82
-    # start with the fan off
-    M107
-    # Start bed heating
-    M140 S{BED_TEMP}
-    # Wait for bed to reach temperature
-    M190 S{BED_TEMP}
-    # Reset the G-Code Z offset (adjust Z offset if needed)
-    SET_GCODE_OFFSET Z=0.0
-    # clear pause
-    CLEAR_PAUSE
-    # Home the printer
-    G28
-    # Move the nozzle near the bed
-    G1 Z15 F3000
-    # Set and wait for nozzle to reach temperature
-    GO_TO_PARKING
-    M109 S{EXTRUDER_TEMP}
-    # zero the extruded length
-    G92 E0
-    {% if LOAD|int != -1 %}
-        {% if LOAD|int == 0 %}
-            T0
-        {% endif %}
-        {% if LOAD|int == 1 %}
-            T1
-        {% endif %}
-        {% if LOAD|int == 2 %}
-            T2
-        {% endif %}
-        {% if LOAD|int == 3 %}
-            T3
-        {% endif %}
-        {% if LOAD|int == 4 %}
-            T4
-        {% endif %}
-        M400
-        G92 E0
-    {% endif %}
-    GO_TO_PARKING_OUT
-    # start printing
-    G1 F9000
-    M117 ->> V-King Rocks! <<-
-    bip
 
-[gcode_macro END_PRINT]
-gcode:
-    # Move nozzle away from print while retracting
-    G91
-    # retract the filament a bit before lifting the nozzle to release some of the pressure
-    G1 E-1 F300
-    # move Z up a bit and retract filament even more
-    G1 Z+5 E-2 X-20 Y-20 F9000
-    # Eject filament
-    M702
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # the bed to move to the front
-    G90
-    G1 X10 Y10  F9000
-    # Disable steppers
-    M84
-    # extruder fan off
-    M107
-    bip
+[include  printer-macros.cfg]
+[include printer-mmu2s.cfg]
+#[include printer-laser.cfg]
 
-
+###########################################################################
+###########################################################################
+###########################################################################
+###########################################################################
 
