--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -54,15 +54,14 @@ gcode:
     G1 Z0 F300
     G1 Z10 F300
 
-[gcode_macro Z_TILT_ADJUST]
-rename_existing: OLDZ_TILT_ADJUST
+[gcode_macro MZ_TILT_ADJUST]
 gcode:
     {% if printer["gcode_macro VARS_PRINTER"].enable_z_tilt|int ==1 %}
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     G28
     {% endif %}
     DEPLOY_TOUCHMI
-    OLDZ_TILT_ADJUST
+    Z_TILT_ADJUST
     {% endif %}
 
 [gcode_macro BED_MESH_CALIBRATE]
@@ -71,7 +70,7 @@ gcode:
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     G28
     {% endif %}
-    Z_TILT_ADJUST
+    MZ_TILT_ADJUST
     OLDBED_MESH_CALIBRATE
     RETRACT_TOUCHMI
 
@@ -88,7 +87,7 @@ gcode:
 [gcode_macro HOME_ALL]
 gcode:
     G28
-    Z_TILT_ADJUST
+    MZ_TILT_ADJUST
     G28 Z0
     RETRACT_TOUCHMI
 
