add center bed position

--- a/blv/printer.cfg
+++ b/blv/printer.cfg
@@ -468,6 +468,8 @@ variable_end_x_pos: 0
 variable_end_y_pos: 180
 variable_touchmi_x_pos: 260
 variable_touchmi_y_pos: 0
+variable_touchmi_x_center_pos: 125
+variable_touchmi_y_center_pos: 100
 variable_touchmi_z_height: 20
 variable_enable_mmu: 1
 variable_enable_servo: 1
