--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -31,7 +31,7 @@ gcode:
 
 [gcode_macro GO_TO_CENTER]
 gcode:
-    G1 X68 Y85 F3600
+    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_center_pos|int}  Y{printer["gcode_macro VARS_PRINTER"].touchmi_y_center_pos|int} F3600
 
 [gcode_macro DEPLOY_TOUCHMI]
 gcode:
