--- a/vking/printer.cfg
+++ b/vking/printer.cfg
@@ -262,6 +262,8 @@ variable_end_x_pos: 10
 variable_end_y_pos: 10
 variable_touchmi_x_pos: 375
 variable_touchmi_y_pos: -10
+variable_touchmi_x_center_pos: 200
+variable_touchmi_y_center_pos: 200
 variable_touchmi_z_height: 20
 variable_enable_mmu: 1
 variable_enable_servo: 0
