--- a/vam8-bowden/printer.cfg
+++ b/vam8-bowden/printer.cfg
@@ -357,6 +357,8 @@ variable_end_x_pos: 10
 variable_end_y_pos: 210
 variable_touchmi_x_pos: 213
 variable_touchmi_y_pos: 0
+variable_touchmi_x_center_pos: 68
+variable_touchmi_y_center_pos: 85
 variable_touchmi_z_height: 20
 variable_enable_mmu: 0
 variable_enable_servo: 0
