--- a/vam8-direct/printer.cfg
+++ b/vam8-direct/printer.cfg
@@ -145,7 +145,7 @@ fan_speed: 1.0
 
 ##################################
 #
-# PRINTER / DISPLAY / MCU ...
+# GENERAL : MCU / PRINTER / DISPLAY
 #
 ##################################
 
@@ -167,17 +167,6 @@ max_z_accel: 100
 timeout: 1200
 
 
-#square_corner_velocity: 0
-#   The maximum velocity (in mm/s) that the toolhead may travel a 90
-#   degree corner at. A non-zero value can reduce changes in extruder
-#   flow rates by enabling instantaneous velocity changes of the
-#   toolhead during cornering. This value configures the internal
-#   centripetal velocity cornering algorithm; corners with angles
-#   larger than 90 degrees will have a higher cornering velocity while
-#   corners with angles less than 90 degrees will have a lower
-#   cornering velocity. If this is set to zero then the toolhead will
-#   decelerate to zero at each corner. The default is 5mm/s.
-
 # "RepRapDiscount 128x64 Full Graphic Smart Controller" type displays
 [display]
 lcd_type: st7920
@@ -187,6 +176,9 @@ sid_pin: P0.18
 encoder_pins: ^P3.25, ^P3.26
 click_pin: ^!P2.11
 kill_pin: ^!P1.22
+
+[force_move]
+enable_force_move: True
 
 ##################################
 #
@@ -218,7 +210,6 @@ probe_count: 4,4
 fade_start: 1.0
 fade_end: 10.0
 
-
 [screws_tilt_adjust]
 screw1: 0,-10
 screw1_name: front left
@@ -232,41 +223,6 @@ speed: 50
 horizontal_move_z: 10
 screw_thread: CW-M3
 
-
-#[safe_z_home]
-#home_xy_position: 68,85
-#speed: 70.0
-#z_hop: 10.0
-#z_hop_speed: 5.0
-#move_to_previous: False
-
-#    G1 X73 Y105 F3600
-[homing_override]
-set_position_z: 10
-axes: z
-gcode:
-    G90
-    G1 Z20 F300
-    G28 X0 Y0
-    G1 X230 F3600
-    G1 X68 Y85 F3600
-    G28 Z0
-    G1 Z0 F300
-    G1 Z10 F300
-
-[gcode_macro G29]
-gcode:
-    G28
-    G1 Z10 F600
-    G90
-    G1 Z20 F300
-    G28 X0 Y0
-    G1 X230 Y0 F3600
-    G1 X0 Y0 F3600
-    BED_MESH_CALIBRATE
-    G1 Z0 F300
-    G1 Z10 F300
-
 ###############################################################
 ###############################################################
 ###############################################################
@@ -277,177 +233,24 @@ gcode:
 # MACROS
 #
 ########################
-
-########################
-#
-# START END MACROS
-#
-########################
-# Replace the slicer's custom start and end g-code scripts with
-# START_PRINT and END_PRINT.
-
-[gcode_macro START_PRINT]
-default_parameter_BED_TEMP: 60
-default_parameter_EXTRUDER_TEMP: 250
+[gcode_macro VARS_PRINTER]
+variable_end_x_pos: 10
+variable_end_y_pos: 210
+variable_touchmi_x_pos: 230
+variable_touchmi_y_pos: 0
+variable_touchmi_x_center_pos: 68
+variable_touchmi_y_center_pos: 85
+variable_touchmi_z_height: 20
+variable_enable_mmu: 0
+variable_enable_servo: 0
+variable_enable_z_tilt: 0
+variable_enable_clean_nozzle: 0
+variable_clean_x_pos: -14
+variable_clean_y_pos: 81
+variable_change_filament_x_pos: 10
+variable_change_filament_y_pos: 10
+variable_change_length_slow: 120
+variable_change_length_fast: 0
 gcode:
-    # metric values
-    G21
-    # Use absolute coordinates
-    G90
-    # set extruder to absolute mode
-    M82
-    # start with the fan off
-    M107
-    # Start bed heating
-    M140 S{BED_TEMP}
-    # Wait for bed to reach temperature
-    M190 S{BED_TEMP}
-    # Reset the G-Code Z offset (adjust Z offset if needed)
-    SET_GCODE_OFFSET Z=0.0
-    # Home the printer
-    G28
-    # Adjust two Z leadscrew
-    Z_TILT_ADJUST
-    # Move the nozzle near the bed
-    G1 Z15 F3000
-    # Set and wait for nozzle to reach temperature
-    M109 S{EXTRUDER_TEMP}
-    # clean nozzle
-    clean
-    # zero the extruded length
-    G92 E0
-    # start printing
-    G1 F9000
-    M117 Printing...
-    bip
 
-[gcode_macro END_PRINT]
-gcode:
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # Move nozzle away from print while retracting
-    G91
-    # retract the filament a bit before lifting the nozzle to release some of the pressure
-    G1 E-1 F300
-    # move Z up a bit and retract filament even more
-    G1 Z+5 E-2 X-20 Y-20 F9000
-    G90
-    # the bed to move to the front
-    G1 X10 Y210 F9000
-    # Disable steppers
-    M84
-    # extruder fan off
-    M107
-    bip
-
-########################
-#
-#
-#
-########################
-# Use print_start for you slicer starting script
-[gcode_macro bip]
-gcode:
-    SET_PIN PIN=beeper VALUE=1
-    G4 P1000 ; wait 1 s
-    SET_PIN PIN=beeper VALUE=0
-
-#[gcode_macro clean]
-#gcode:
-#    G1 X226 Y66
-#    G1 Z-1
-#    G1 X235 Y81
-#    G1 X226 Y97
-#    G1 X235 Y97
-#    G1 X226 Y81
-#    G1 X235 Y66
-#    G1 X226 Y66
-#    G1 X235 Y81
-#    G1 X226 Y97
-#    G1 Z10
-
-#############################
-#
-#   LOAD/UNLOAD/PAUSE macros
-#
-#############################
-[pause_resume]
-
-[gcode_macro M600]
-default_parameter_X: 10
-default_parameter_Y: 10
-default_parameter_Z: 10
-gcode:
-    SAVE_GCODE_STATE NAME=M600_state
-    PAUSE
-    G91
-    G1 E-1 F2000
-    G1 Z{Z}
-    G90
-    G1 X{X} Y{Y} F3000
-    G91
-    G1 E+10 F540
-    G1 E-20 F3000
-    G4 P3000
-    G1 E-80 F3000
-    G1 E-20 F3000
-    bip
-    G4 P200
-    bip
-    G4 P200
-    bip
-    G4 P10000
-    G1 E+80 F200
-    G1 E+30 F200    
-    G4 P1000
-    G1 E+1 F600
-    bip
-    ; prime nozzle
-    G1 E-0.8 F4500
-    G1 E0.8 F4500
-    G1 E0.8 F4500
-    RESTORE_GCODE_STATE NAME=M600_state
-
-[gcode_macro CHANGE_EJECT]
-default_parameter_TEMP: 235
-gcode:
-    G28
-    G1 X0 Y0 Z20
-    M109 S{TEMP} T0
-    G91
-    M83
-    bip
-    G1 Z+5 E+1 F4500
-    G1 E+10 F540
-    G1 E-20 F3000
-    G4 P3000
-    G1 E-80 F3000
-    G1 E-20 F3000
-    bip
-    G4 P200
-    bip
-    G4 P200
-    bip
-    M82
-    G90
-    M104 S0 T0
-
-[gcode_macro CHANGE_INSERT]
-default_parameter_TEMP: 235
-gcode:
-    G28
-    G1 X0 Y0 Z20
-    M109 S{TEMP} T0
-    G91
-    M83
-    bip
-    G1 E+80 F200
-    G1 E+30 F200
-    G4 P1000
-    G1 E+1 F600
-    bip
-    M82
-    G90
-    M104 S0 T0
+[include  printer-macros.cfg]
