--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -277,7 +277,7 @@ gcode:
     RESTORE_GCODE_STATE NAME=M600_state MOVE=1
 
 [gcode_macro EJECT_FILAMENT]
-default_parameter_LENTGH_MAX: 100
+default_parameter_LENGTH_MAX: 100
 gcode:
     G91
     M83
@@ -287,11 +287,11 @@ gcode:
     G1 E-20 F3000
     G4 P3000
     {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_slow|int//LENGTH_MAX|int) %}
-    G1 E-{LENTGH_MAX} F200
+    G1 E-{LENGTH_MAX} F200
     {% endfor %}
     G1 E-{printer["gcode_macro VARS_PRINTER"].change_length_slow|int%LENGTH_MAX|int} F200
     {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_fast|int//LENGTH_MAX|int) %}
-    G1 E-{LENTGH_MAX} F3600
+    G1 E-{LENGTH_MAX} F3600
     {% endfor %}
     G1 E-{printer["gcode_macro VARS_PRINTER"].change_length_fast|int%LENGTH_MAX|int} F3600
     bip
@@ -313,17 +313,17 @@ gcode:
     M104 S0 T0
 
 [gcode_macro INSERT_FILAMENT]
-default_parameter_LENTGH_MAX: 100
+default_parameter_LENGTH_MAX: 100
 gcode:
     G91
     M83
     {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_fast|int//LENGTH_MAX|int) %}
-    G1 E{LENTGH_MAX} F3600
+    G1 E{LENGTH_MAX} F3600
     {% endfor %}
     G1 E{printer["gcode_macro VARS_PRINTER"].change_length_fast|int%LENGTH_MAX|int} F3600
     bip
     {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_slow|int//LENGTH_MAX|int) %}
-    G1 E{LENTGH_MAX} F200
+    G1 E{LENGTH_MAX} F200
     {% endfor %}
     G1 E{printer["gcode_macro VARS_PRINTER"].change_length_slow|int%LENGTH_MAX|int} F200
     G4 P1000
