--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -19,8 +19,11 @@
 set_position_z: 0
 axes: z
 gcode:
+    G90
     {% if not 'xy' in printer.toolhead.homed_axes %}
-    G28 X0 Y0
+    G28 X0 
+    G1 X30 F2000
+    G28 Y0
     {% endif %}
     G91
     G1 X10 Y10 F3600
@@ -343,4 +346,28 @@ gcode:
     M109 S{TEMP} T0
     INSERT_FILAMENT
     M104 S0 T0
+
+##################################
+##################################
+#
+#  TUNNING  MACROS
+#
+##################################
+##################################
+[gcode_macro SPEED_TEST]
+default_parameter_SPEED: 2000
+gcode:
+    G28 X0 Y0
+    G90
+    {% for i in range(3) %}
+    G1 X20 Y20  F{SPEED|int}
+    G1 X{printer.configfile.config["stepper_x"]["position_max"]|int -20} Y20 F{SPEED|int}
+    G1 X{printer.configfile.config["stepper_x"]["position_max"]|int -20} Y{printer.configfile.config["stepper_y"]["position_max"]|int -20} F{SPEED|int}
+    G1 X20 Y{printer.configfile.config["stepper_y"]["position_max"]|int -20} F{SPEED|int}
+    G1 X20 Y20 F{SPEED|int}
+    G1 X{printer.configfile.config["stepper_x"]["position_max"]|int -20} Y{printer.configfile.config["stepper_y"]["position_max"]|int -20}  F{SPEED|int}
+    G1 X20 Y{printer.configfile.config["stepper_y"]["position_max"]|int -20}  F{SPEED|int}
+    G1 X{printer.configfile.config["stepper_x"]["position_max"]|int -20} Y20  F{SPEED|int}
+    {% endfor %}
+
 
