--- a/vking/printer-mmu2s-board.cfg
+++ b/vking/printer-mmu2s-board.cfg
@@ -15,6 +15,7 @@
 ########################################
 [mcu mmboard]
 serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_33FFD8054E48363008771743-if00
+restart_method: command
 
 [respond]
 default_type: command
@@ -40,7 +41,7 @@ enable_pin: !mmboard:PC4
 step_distance: .00606
 velocity: 40
 accel: 1500 # same value that your printer accel
-endstop_pin: ^mmboard:PC2 # PINDA X-
+#endstop_pin: ^mmboard:PC2 # PINDA X-
 
 ########################################
 # Y : MMU2S idler with the 5 ball bearings
@@ -68,33 +69,33 @@ accel: 500
 endstop_pin: tmc2209_idler_stepper:virtual_endstop
 homing_retract_dist: 0
 
-########################################
-# X : MMU2S color selector
-[tmc2209 manual_stepper selector_stepper]
-uart_pin: mmboard:PC12
-microsteps: 16
-run_current: 1.000
-hold_current: 0.400
-interpolate: True
-sense_resistor: 0.110
-stealthchop_threshold: 250
-# comment this two line if you don't use sensorless
-diag_pin: ^mmboard:PA2 # X+
-driver_SGTHRS: 150
-
-[manual_stepper selector_stepper]
-step_pin: mmboard:PC6
-dir_pin: mmboard:PC7
-enable_pin: !mmboard:PB15
-# 80 step/mm
-step_distance: .0025
-velocity: 35
-accel: 500
-# uncomment this two line if you don't use sensorless
-#endstop_pin: !mmboard:PA2 # switch endstop on the left for selector X+
-# comment this two line if you don't use sensorless
-endstop_pin: tmc2209_selector_stepper:virtual_endstop
-homing_retract_dist: 0
+#########################################
+## X : MMU2S color selector
+#[tmc2209 manual_stepper selector_stepper]
+#uart_pin: mmboard:PC12
+#microsteps: 16
+#run_current: 1.000
+#hold_current: 0.400
+#interpolate: True
+#sense_resistor: 0.110
+#stealthchop_threshold: 250
+## comment this two line if you don't use sensorless
+#diag_pin: ^mmboard:PA2 # X+
+#driver_SGTHRS: 150
+#
+#[manual_stepper selector_stepper]
+#step_pin: mmboard:PC6
+#dir_pin: mmboard:PC7
+#enable_pin: !mmboard:PB15
+## 80 step/mm
+#step_distance: .0025
+#velocity: 35
+#accel: 500
+## uncomment this two line if you don't use sensorless
+##endstop_pin: !mmboard:PA2 # switch endstop on the left for selector X+
+## comment this two line if you don't use sensorless
+#endstop_pin: tmc2209_selector_stepper:virtual_endstop
+#homing_retract_dist: 0
 
 ## IR extruder switch
 [filament_switch_sensor ir_sensor]
