--- a/blv/printer.cfg
+++ b/blv/printer.cfg
@@ -16,7 +16,7 @@
 
 [stepper_x]
 step_pin: PB9
-dir_pin: PE0
+dir_pin: !PE0
 enable_pin: !PE1
 #step_distance: .005
 step_distance: .00625
@@ -30,7 +30,7 @@ homing_retract_dist: 0
 
 [stepper_y]
 step_pin: PB8
-dir_pin: PG11
+dir_pin: !PG11
 enable_pin: !PG12
 #step_distance: .005
 step_distance: .00625
@@ -422,7 +422,7 @@ z_offset: 3.55
 [bed_mesh]
 speed: 70
 horizontal_move_z: 10
-mesh_min: 30,10
+mesh_min: 40,10
 mesh_max: 230,210
 probe_count: 5,5
 fade_start: 1.0
