--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -10,6 +10,13 @@
 
 ###############################
 ###############################
+
+[gcode_macro ACTIVATE_EXTRUDER]
+rename_existing: OACTIVATE_EXTRUDER
+default_parameter_EXTRUDER: extruder
+gcode:
+     M118 Set extruder : {EXTRUDER}
+
 ###############################
 ###############################
 
@@ -355,7 +362,7 @@ gcode:
 variable_z_lifted: -1
 variable_x_move: 40
 variable_y_move: 0
-variable_z_lift: 50
+variable_z_lift: 0
 gcode:
     G90
     G1 X{printer["gcode_macro VAR_MMU2S"].pause_x + printer["gcode_macro DEPLOY_PURGE"].x_move} Y{printer["gcode_macro VAR_MMU2S"].pause_y + printer["gcode_macro DEPLOY_PURGE"].y_move} F9000
@@ -366,7 +373,7 @@ gcode:
     G90
     {% endif %}
     G4 P1000
-    SET_SERVO SERVO=purge_servo angle=178
+    SET_SERVO SERVO=purge_servo angle=160
     G90
     G1 X{printer["gcode_macro VAR_MMU2S"].pause_x} Y{printer["gcode_macro VAR_MMU2S"].pause_y} F9000
 
@@ -377,7 +384,7 @@ gcode:
     G1 X{printer["gcode_macro VAR_MMU2S"].pause_x} Y{printer["gcode_macro VAR_MMU2S"].pause_y} F9000
     G1 X{printer["gcode_macro VAR_MMU2S"].pause_x + printer["gcode_macro DEPLOY_PURGE"].x_move} Y{printer["gcode_macro VAR_MMU2S"].pause_y + printer["gcode_macro DEPLOY_PURGE"].y_move} F9000
     SET_SERVO SERVO=purge_servo angle=0
-    SET_SERVO SERVO=purge_servo angle=178
+    SET_SERVO SERVO=purge_servo angle=160
     SET_SERVO SERVO=purge_servo angle=0
     {% if printer["gcode_macro DEPLOY_PURGE"].z_lifted|int == 1 %}
     G91
