rreheat after eject during home

--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -137,6 +137,7 @@ gcode:
     # Load filament into MMU
     {% if printer["gcode_macro VARS_PRINTER"].enable_mmu|int ==1 %}
     HOME_MMU
+    M109 S{EXTRUDER_TEMP}
     GO_TO_PARKING
     # zero the extruded length
     G92 E0
