--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -135,13 +135,16 @@ gcode:
     # Set and wait for nozzle to reach temperature
     M109 S{EXTRUDER_TEMP}
     # Load filament into MMU
-    {% if printer["gcode_macro VARS_PRINTER"].enable_mmu|int ==1 %}
+    {% if printer["gcode_macro VARS_PRINTER"].enable_mmu|int == 1 %}
     HOME_MMU
     M109 S{EXTRUDER_TEMP}
     GO_TO_PARKING
     # zero the extruded length
     G92 E0
     {% if LOAD|int != -1 %}
+        {% if printer["gcode_macro VARS_PRINTER"].enable_servo|int == 1 %}
+            DEPLOY_PURGE
+        {% endif %}
         {% if LOAD|int == 0 %}
             T0
         {% endif %}
@@ -159,6 +162,9 @@ gcode:
         {% endif %}
         M400
         G92 E0
+        {% if printer["gcode_macro VARS_PRINTER"].enable_servo|int == 1 %}
+            RETRACT_PURGE
+        {% endif %}
     {% endif %}
     GO_TO_PARKING_OUT
     {% endif %}
