--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -373,7 +373,7 @@ gcode:
     G90
     {% endif %}
     G4 P1000
-    SET_SERVO SERVO=purge_servo angle=160
+    SET_SERVO SERVO=purge_servo angle=170
     G90
     G1 X{printer["gcode_macro VAR_MMU2S"].pause_x} Y{printer["gcode_macro VAR_MMU2S"].pause_y} F9000
 
@@ -384,7 +384,7 @@ gcode:
     G1 X{printer["gcode_macro VAR_MMU2S"].pause_x} Y{printer["gcode_macro VAR_MMU2S"].pause_y} F9000
     G1 X{printer["gcode_macro VAR_MMU2S"].pause_x + printer["gcode_macro DEPLOY_PURGE"].x_move} Y{printer["gcode_macro VAR_MMU2S"].pause_y + printer["gcode_macro DEPLOY_PURGE"].y_move} F9000
     SET_SERVO SERVO=purge_servo angle=0
-    SET_SERVO SERVO=purge_servo angle=160
+    SET_SERVO SERVO=purge_servo angle=170
     SET_SERVO SERVO=purge_servo angle=0
     {% if printer["gcode_macro DEPLOY_PURGE"].z_lifted|int == 1 %}
     G91
@@ -395,18 +395,22 @@ gcode:
 
 [gcode_macro MOVE_PURGE_FILAMENT]
 default_parameter_PURGE_LENGTH: 60
-default_parameter_PURGE_MAX: 10
+default_parameter_PURGE_MAX: 60
 gcode:
     {% if printer["gcode_macro VAR_MMU2S"].enable_purge_servo == 1 %}
     M118 Purging : {PURGE_LENGTH|int} mm
     G91
     G92 E0
     {% for i in range(PURGE_LENGTH|int//PURGE_MAX|int) %}
-    G1 E{PURGE_MAX} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-    G4 P1000
+        G1 E{PURGE_MAX} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
+        M400
+        G4 P2000
+        G92 E0
     {% endfor %}
     G1 E{PURGE_LENGTH|int%PURGE_MAX|int} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-    G4 P1000
+    M400
+    G4 P2000
+    G92 E0
     G90
     {% else %}
         M118 Could not purge with servo, not enabled ...
@@ -1027,6 +1031,7 @@ gcode:
         FORCE_HOME_MMU
     {% else %}
         M118 MMU already homed !
+        MMU_UNLOCK
     {% endif %}
 
 # Home the MMU
