--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -14,6 +14,64 @@
 #   TOUCH'MI           #
 #                      #
 ########################
+[gcode_macro G28]
+rename_existing: OLDG28
+gcode:
+    {% set do_x = 0 %}
+    {% set do_y = 0 %}
+    {% set do_z = 0 %}
+    {% if params.X is defined %}
+         HOME_X
+    {% else %}
+        {% set do_x = 1 %} 
+    {% endif %}
+    {% if params.Y is defined %}
+         HOME_Y
+    {% else %}
+         {% set do_y = 1 %} 
+    {% endif %}
+    {% if params.Z is defined %}
+         HOME_ALL
+    {% else %}
+        {% set do_z = 1 %} 
+    {% endif %}
+    {% if do_x == 1 and do_y == 1 and do_z == 1 %}
+         HOME_ALL
+    {% endif %}
+
+[gcode_macro HOME_X]
+gcode:
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
+    G4 P1000
+    G28 X0
+    G4 P2000
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_x"]["hold_current"]}
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2209 stepper_y"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_y"]["hold_current"]}
+    G4 P1000
+    G91
+    {% if printer.configfile.config["stepper_x"]["position_endstop"]|int < 30 %}
+    G1 X30 F2000
+    {% else %}
+    G1 X-30 F2000
+    {% endif %}
+
+[gcode_macro HOME_Y]
+gcode:
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
+    G4 P1000
+    G28 Y0
+    G4 P2000
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_x"]["hold_current"]}
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2209 stepper_y"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_y"]["hold_current"]}
+    G4 P1000
+    G91
+    {% if printer.configfile.config["stepper_y"]["position_endstop"]|int < 10 %}
+    G1 Y10 F2000
+    {% else %}
+    G1 Y-10 F2000
+    {% endif %}
 
 [homing_override]
 set_position_z: 0
@@ -21,12 +79,9 @@ axes: z
 gcode:
     G90
     {% if not 'xy' in printer.toolhead.homed_axes %}
-    G28 X0 
-    G1 X30 F2000
-    G28 Y0
+    HOME_X 
+    HOME_Y
     {% endif %}
-    G91
-    G1 X10 Y10 F3600
     G90
     G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
     DEPLOY_TOUCHMI
@@ -43,7 +98,8 @@ gcode:
     {% if printer["gcode_macro RETRACT_TOUCHMI"].touchmi_retracted|int == 1 %}
     SET_GCODE_VARIABLE MACRO=RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=0
         {% if not 'xy' in printer.toolhead.homed_axes %}
-        G28 X0 Y0
+        HOME_X 
+        HOME_Y
         {% endif %}
     G90
     G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_pos|int} F3600
@@ -364,7 +420,8 @@ gcode:
 [gcode_macro SPEED_TEST]
 default_parameter_SPEED: 2000
 gcode:
-    G28 X0 Y0
+    HOME_X
+    HOME_Y
     G90
     {% for i in range(3) %}
     G1 X20 Y20  F{SPEED|int}
