--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -15,7 +15,7 @@
 #                      #
 ########################
 [gcode_macro G28]
-rename_existing: OLDG28
+rename_existing: G999928
 gcode:
     {% set do_x = 0 %}
     {% set do_y = 0 %}
@@ -31,7 +31,7 @@ gcode:
          {% set do_y = 1 %} 
     {% endif %}
     {% if params.Z is defined %}
-         HOME_ALL
+         G999928 Z0
     {% else %}
         {% set do_z = 1 %} 
     {% endif %}
@@ -44,7 +44,7 @@ gcode:
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
     SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
     G4 P1000
-    G28 X0
+    G999928 X0
     G4 P2000
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_x"]["hold_current"]}
     SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2209 stepper_y"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_y"]["hold_current"]}
@@ -61,7 +61,7 @@ gcode:
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
     SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
     G4 P1000
-    G28 Y0
+    G999928 Y0
     G4 P2000
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_x"]["hold_current"]}
     SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2209 stepper_y"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_y"]["hold_current"]}
@@ -86,7 +86,7 @@ gcode:
     G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
     DEPLOY_TOUCHMI
     GO_TO_CENTER
-    G28 Z0
+    G999928 Z0
     G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
 
 [gcode_macro GO_TO_CENTER]
@@ -117,7 +117,7 @@ gcode:
 
 [gcode_macro MZ_TILT_ADJUST]
 gcode:
-    {% if printer["gcode_macro VARS_PRINTER"].enable_z_tilt|int ==1 %}
+    {% if printer["gcode_macro VARS_PRINTER"].enable_z_tilt|int == 1 %}
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     G28
     {% endif %}
@@ -147,9 +147,12 @@ gcode:
 
 [gcode_macro HOME_ALL]
 gcode:
-    G28
+    SET_GCODE_VARIABLE MACRO=RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=1
+    HOME_X
+    HOME_Y
+    DEPLOY_TOUCHMI
     MZ_TILT_ADJUST
-    G28 Z0
+    G999928 Z0
     RETRACT_TOUCHMI
 
 ########################
