--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -119,7 +119,7 @@ gcode:
 gcode:
     {% if printer["gcode_macro VARS_PRINTER"].enable_z_tilt|int == 1 %}
     {% if not 'xyz' in printer.toolhead.homed_axes %}
-    G28
+    HOME_ALL
     {% endif %}
     DEPLOY_TOUCHMI
     Z_TILT_ADJUST
@@ -129,7 +129,7 @@ gcode:
 rename_existing: OLDBED_MESH_CALIBRATE
 gcode: 
     {% if not 'xyz' in printer.toolhead.homed_axes %}
-    G28
+    HOME_ALL
     {% endif %}
     MZ_TILT_ADJUST
     OLDBED_MESH_CALIBRATE
@@ -138,7 +138,7 @@ gcode:
 [gcode_macro G29]
 gcode:
     {% if not 'xyz' in printer.toolhead.homed_axes %}
-    G28
+    HOME_ALL
     {% endif %}
     DEPLOY_TOUCHMI
     GO_TO_CENTER
@@ -151,6 +151,7 @@ gcode:
     HOME_X
     HOME_Y
     DEPLOY_TOUCHMI
+    G999928 Z0
     MZ_TILT_ADJUST
     G999928 Z0
     RETRACT_TOUCHMI
