add BTT MMU DIIP

--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -327,9 +327,9 @@ gcode:
     {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
     {% if printer["gcode_macro HOME_MMU"].home != -1 %}
         M118 Select Tool {params.VALUE} ...
-        MANUAL_STEPPER STEPPER=idler_stepper MOVE={printer["gcode_macro VAR_MMU2S"].idler[params.VALUE|int]}
+        MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE={printer["gcode_macro VAR_MMU2S"].idler[params.VALUE|int]}
         {% if printer["gcode_macro VAR_MMU2S"].enable_5in1 == 0 %}
-        MANUAL_STEPPER STEPPER=selector_stepper MOVE={printer["gcode_macro VAR_MMU2S"].colorselector[params.VALUE|int]}
+        MMU_MANUAL_STEPPER STEPPER=selector_stepper MOVE={printer["gcode_macro VAR_MMU2S"].colorselector[params.VALUE|int]}
         {% endif %}
         SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=tool_selected VALUE={params.VALUE}
         SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=old_color_selected VALUE={color_selected}
@@ -345,7 +345,7 @@ gcode:
 gcode:
     {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
     {% if printer["gcode_macro HOME_MMU"].home != -1 %}
-        MANUAL_STEPPER STEPPER=idler_stepper MOVE={printer["gcode_macro VAR_MMU2S"].idler_home_position}
+        MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE={printer["gcode_macro VAR_MMU2S"].idler_home_position}
         SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=tool_selected VALUE=-1
     {% else %}
         M118 Could not unselect tool, MMU is not homed
@@ -504,14 +504,14 @@ gcode:
     M118 Check if filament is loaded
     G91
     G92 E0
-    MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=10 SET_POSITION=0 SYNC=0
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=10 SET_POSITION=0 SYNC=0
     G1 E10 F600
-    MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-    MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-    MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].load_in_extruder - 10} SPEED=10 SET_POSITION=0 SYNC=0
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].load_in_extruder - 10} SPEED=10 SET_POSITION=0 SYNC=0
     G1 E-{printer["gcode_macro VAR_MMU2S"].load_in_extruder - 10} F600
-    MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-    MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
     G92 E0
     G90
     G4 P1000
@@ -535,10 +535,10 @@ gcode:
         GO_TO_PARKING
         G91
         G92 E0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=10 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=10 SET_POSITION=0 SYNC=0
         G1 E{printer["gcode_macro VAR_MMU2S"].load_in_extruder} F600
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G92 E0
         G90
     {% endif %}
@@ -549,10 +549,10 @@ gcode:
         G91
         G92 E0
     	SET_GCODE_VARIABLE MACRO=CHECK_LOAD_FILAMENT_IN_EXTRUDER VARIABLE=filament_in VALUE=1
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=10 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=10 SET_POSITION=0 SYNC=0
         G1 E{printer["gcode_macro VAR_MMU2S"].load_in_extruder - 10} F600
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G92 E0
 	G90   
     {% endif %}
@@ -571,10 +571,10 @@ gcode:
         SET_GCODE_VARIABLE MACRO=CHECK_LOAD_FILAMENT_IN_EXTRUDER VARIABLE=filament_in VALUE=0
         G91
         G92 E0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=10 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=10 SET_POSITION=0 SYNC=0
         G1 E{printer["gcode_macro VAR_MMU2S"].load_in_extruder} F600
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G92 E0
         G90
         G4 P1000
@@ -602,16 +602,16 @@ gcode:
         MMU_ERROR_INCREMENT_UNLOAD
         G91
         G92 E0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=10 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=10 SET_POSITION=0 SYNC=0
         G1 E10 F600
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder1} SPEED=10 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder1} SPEED=10 SET_POSITION=0 SYNC=0
         G1 E-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder1} F600
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder2} SPEED=50 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder2} SPEED=50 SET_POSITION=0 SYNC=0
         G1 E-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder2} F3000
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G92 E0
         G90
     {% endif %}
@@ -628,13 +628,13 @@ gcode:
     {% if printer.extruder.temperature > printer["gcode_macro VAR_MMU2S"].min_temp_extruder %}
         M118 Unloading Filament...
         G91
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder1} SPEED=10 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder1} SPEED=10 SET_POSITION=0 SYNC=0
         G1 E-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder1} F600
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder2} SPEED=50 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder2} SPEED=50 SET_POSITION=0 SYNC=0
         G1 E-{printer["gcode_macro VAR_MMU2S"].unload_in_extruder2} F3000
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G90
         G92 E0
         G4 P1000
@@ -710,10 +710,10 @@ gcode:
     {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
     {% if printer["gcode_macro SELECT_TOOL"].tool_selected|int != -1 %}
         M118 Loading filament to PINDA ...
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].pinda_load_length} STOP_ON_ENDSTOP=2
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=10
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].pinda_load_length} STOP_ON_ENDSTOP=2
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=10
         IS_FILAMENT_IN_PINDA
         M118 Loading done to PINDA
     {% else %}
@@ -729,12 +729,12 @@ gcode:
         M118 Loading filament from PINDA to extruder ...
         G91
         G92 E0
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].bowden_load_length1} SPEED=120
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].bowden_load_length2} SPEED=20 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].bowden_load_length1} SPEED=120
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].bowden_load_length2} SPEED=20 SET_POSITION=0 SYNC=0
         G1 E{printer["gcode_macro VAR_MMU2S"].bowden_load_length2} F1200
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G92 E0
         M118 Loading done from PINDA to extruder
     {% else %}
@@ -768,11 +768,11 @@ gcode:
     {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
     {% if printer["gcode_macro SELECT_TOOL"].tool_selected|int != -1 %}
         M118 Unloading filament from PINDA ...
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].pinda_unload_length}
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-10
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].pinda_unload_length}
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-10
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         IS_FILAMENT_STUCK_IN_PINDA
         SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=color_selected VALUE=-1
         M118 Unloading done from PINDA
@@ -796,10 +796,10 @@ gcode:
         G1 E20 F500
         G1 E-20 F200
 	SELECT_TOOL VALUE={printer["gcode_macro SELECT_TOOL"].color_selected|int}
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-30 SPEED=50 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-30 SPEED=50 SET_POSITION=0 SYNC=0
         G1 E-30 F3000
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         UNSELECT_TOOL
         G92 E0
         G90
@@ -814,17 +814,17 @@ gcode:
     {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
     {% if printer["gcode_macro SELECT_TOOL"].tool_selected|int != -1 %}
         M118 Unloading filament from extruder to PINDA ...
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         {% if printer["gcode_macro VAR_MMU2S"].enable_5in1 == 0 %}
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].bowden_unload_length} SPEED=120 STOP_ON_ENDSTOP=-2
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].bowden_unload_length} SPEED=120 STOP_ON_ENDSTOP=-2
         IS_FILAMENT_STUCK_IN_PINDA
         {% else %}
         G91
         G92 E0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].bowden_unload_length} SPEED=20 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].bowden_unload_length} SPEED=20 SET_POSITION=0 SYNC=0
         G1 E-{printer["gcode_macro VAR_MMU2S"].bowden_unload_length} F1200
-        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G92 E0
         {% endif %}
         {% if printer["gcode_macro VAR_MMU2S"].splitter_endstop == 1 %}
@@ -1053,29 +1053,29 @@ gcode:
 [gcode_macro HOME_IDLER]
 gcode:
     M118 Homing idler
-    MANUAL_STEPPER STEPPER=idler_stepper SET_POSITION=0
-    MANUAL_STEPPER STEPPER=idler_stepper MOVE=7
+    MMU_MANUAL_STEPPER STEPPER=idler_stepper SET_POSITION=0
+    MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE=7
     {% if printer["gcode_macro VAR_MMU2S"].tmc2209_sensorless ==  0 %}
-    MANUAL_STEPPER STEPPER=idler_stepper MOVE=-95
+    MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE=-95
     {% else %}
     G4 P2000
-    MANUAL_STEPPER STEPPER=idler_stepper MOVE=-95 STOP_ON_ENDSTOP=1
+    MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE=-95 STOP_ON_ENDSTOP=1
     {% endif %}
-    MANUAL_STEPPER STEPPER=idler_stepper SET_POSITION=2
-    MANUAL_STEPPER STEPPER=idler_stepper MOVE={printer["gcode_macro VAR_MMU2S"].idler_home_position}
+    MMU_MANUAL_STEPPER STEPPER=idler_stepper SET_POSITION=2
+    MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE={printer["gcode_macro VAR_MMU2S"].idler_home_position}
 
 # Home selector
 [gcode_macro HOME_SELECTOR]
 gcode:
     M118 Homing selector
-    MANUAL_STEPPER STEPPER=selector_stepper SET_POSITION=0
+    MMU_MANUAL_STEPPER STEPPER=selector_stepper SET_POSITION=0
     {% if printer["gcode_macro VAR_MMU2S"].tmc2209_sensorless ==  0 %}
-    MANUAL_STEPPER STEPPER=selector_stepper MOVE=-76
+    MMU_MANUAL_STEPPER STEPPER=selector_stepper MOVE=-76
     {% else %}
     G4 P2000
-    MANUAL_STEPPER STEPPER=selector_stepper MOVE=-76 STOP_ON_ENDSTOP=1
+    MMU_MANUAL_STEPPER STEPPER=selector_stepper MOVE=-76 STOP_ON_ENDSTOP=1
     {% endif %}
-    MANUAL_STEPPER STEPPER=selector_stepper SET_POSITION=0
+    MMU_MANUAL_STEPPER STEPPER=selector_stepper SET_POSITION=0
 
 # Home the MMU :
 # 1) home the idler
@@ -1090,7 +1090,7 @@ gcode:
     {% if printer["gcode_macro VAR_MMU2S"].enable_5in1 == 0 %}
     HOME_SELECTOR
     {% endif %}
-    MANUAL_STEPPER STEPPER=idler_stepper MOVE=0
+    MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE=0
     SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=tool_selected VALUE=-1
     SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=color_selected VALUE=-1
     M118 Test idler filament 0
@@ -1099,7 +1099,7 @@ gcode:
     M118 Test load filament 0
     LOAD_FILAMENT_TO_PINDA
     G4 P1000
-    MANUAL_STEPPER STEPPER=gear_stepper MOVE=-10
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-10
     UNLOAD_FILAMENT_FROM_PINDA
     {% else %}
     SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=color_selected VALUE=-1
@@ -1122,10 +1122,10 @@ gcode:
 ###############################################
 [gcode_macro MMU_TEST_LOAD]
 gcode:
-    G28
+    #G28
     HOME_MMU
-    G1 X100 Y-20 F2000
-    {% for i in range(11) %}
+    #G1 X100 Y-20 F2000
+    {% for i in range(10) %}
     M118 Test {i}
     {% for j in range(5) %}
     SELECT_TOOL VALUE={j}
@@ -1145,10 +1145,10 @@ gcode:
         MMU_ERROR_INCREMENT_LOAD
         G91
         SELECT_TOOL VALUE={printer["gcode_macro SELECT_TOOL"].color_selected|int}
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=10 SET_POSITION=0 SYNC=0
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=10 SET_POSITION=0 SYNC=0
 	G1 E10 F600
-	MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+	MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G1 E10 F600
         UNSELECT_TOOL
         G1 E10 F1800
@@ -1162,10 +1162,10 @@ gcode:
 gcode:
     {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
     G91
-    MANUAL_STEPPER STEPPER=gear_stepper MOVE=20 SPEED=10 SET_POSITION=0 SYNC=0
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=20 SPEED=10 SET_POSITION=0 SYNC=0
     G1 E20 F600
-    MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-    MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
     UNSELECT_TOOL
     G1 E22 F1393
     G92 E0
@@ -1177,13 +1177,13 @@ gcode:
     IS_FILAMENT_IN_EXTRUDER
     G91
     SELECT_TOOL VALUE={printer["gcode_macro SELECT_TOOL"].color_selected|int}
-    MANUAL_STEPPER STEPPER=gear_stepper MOVE=-40 SPEED=10 SET_POSITION=0 SYNC=0
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-40 SPEED=10 SET_POSITION=0 SYNC=0
     G1 E-40 F600
-    MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-    MANUAL_STEPPER STEPPER=gear_stepper MOVE=-60 SPEED=50 SET_POSITION=0 SYNC=0
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-60 SPEED=50 SET_POSITION=0 SYNC=0
     G1 E-60 F3000
-    MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
-    MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+    MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
     UNSELECT_TOOL
     G90
     G92 E0
