--- a/printer-mainsail.cfg
+++ b/printer-mainsail.cfg
@@ -1,4 +1,11 @@
 ###########   MAINSAIL #
+[gcode_shell_command telegram]
+command: sh /home/pi/moonraker-telegram/scripts/telegram.sh "this is a message from your printer"
+timeout: 2.
+verbose: false
+
+
+[display_status]
 
 [gcode_macro CANCEL_PRINT]
 rename_existing: BASE_CANCEL_PRINT
