--- a/vam8-bowden/printer-mosquito.cfg
+++ b/vam8-bowden/printer-mosquito.cfg
@@ -174,8 +174,8 @@ nozzle_diameter: 0.800
 filament_diameter: 1.750
 max_extrude_only_distance: 150.0
 heater_pin: P2.5
-sensor_type: NTC 100K beta 3950
-#sensor_type: ATC Semitec 104GT-2
+#sensor_type: NTC 100K beta 3950
+sensor_type: ATC Semitec 104GT-2
 #sensor_type: dyze500
 sensor_pin: P0.23
 #control: pid
@@ -275,7 +275,7 @@ click_pin: ^!P2.11
 kill_pin: ^!P1.22
 
 [virtual_sdcard]
-path: ~/.octoprint/uploads/
+path: ~/gcode_files
 
 [firmware_retraction]
 retract_length: 3.0
@@ -306,7 +306,7 @@ value: 0
 pin: P1.29
 x_offset: 49
 y_offset: 25
-z_offset: 3.35
+z_offset: 2.80
 
 [bed_mesh]
 speed: 100
@@ -373,6 +373,7 @@ variable_change_length_fast: 600
 gcode:
 
 [include  printer-macros.cfg]
+[include printer-mainsail.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -385,6 +386,6 @@ gcode:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 29.653
-#*# pid_ki = 1.607
-#*# pid_kd = 136.774
+#*# pid_kp = 19.051
+#*# pid_ki = 1.000
+#*# pid_kd = 90.730
